# project-template

./: Procfile  docker-compose.yml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: routes.py
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: main.tsx
