[project]
name = "backend"
version = "1.0.0"
description = "Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "poethepoet>=0.37.0",
    "ruff>=0.12.8"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "UP",  # pyupgrade
    "I",  # isort
    "S",  # flake8-bandit - we must ignore these rules in tests
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
]

[tool.mypy]
strict = "true"

[tool.poe.tasks]
format-check = "ruff format --check ."
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"
mypy = "mypy ."

[tool.poe.tasks.static-checks]
sequence = ["lint", "format-check", "mypy"]
ignore_fail = "return_non_zero"
